<resources>
    <string name="app_name">Assignment 1</string>
    <string name="color_testing">Color Testing</string>
    <string name="show_color">show Color</string>
    <string name="rgb_red">0</string>
    <string name="rgb_green">0</string>
    <string name="rgb_blue">0</string>
    <string name="label_red">RED</string>
    <string name="label_green">GREEN</string>
    <string name="label_blue">BLUE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="enter_re_password">Enter re-password</string>
    <string name="re_password">Re-Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="cancel">CANCEL</string>
    <string name="mEmail"></string>
    <string name="mPassword"></string>
    <string name="remember_this_account">Remember this account</string>
    <string name="auto_login">Auto-Login</string>
</resources>
